--- a/src/app/calculator/components/calculator-button/calculator-button.html
+++ b/src/app/calculator/components/calculator-button/calculator-button.html
@@ -1,5 +1,5 @@
 <!-- <div class="w-1/4 border-r border-b border-indigo-400"> -->
-<button [class.isCommand]="isCommand()">
+<button #button [class.isCommand]="isCommand()" (click)="handleClick()">
   <ng-content />
 </button>
 <!-- </div> -->
